--- a/www/templates/completarPalabras.html
+++ b/www/templates/completarPalabras.html
@@ -13,7 +13,8 @@
         </div>
         <div class="spacer" style="width: 285px; height: 223px;"></div>
         <div>
-            <a class="button icon-left ion-chevron-left button-clear button-dark">Volver</a>
+            <a ui-sref="menu.home" class="button icon-left ion-chevron-left button-clear button-dark">Volver a Menú</a>
+            <a ui-sref="menu.tiposDeJuegos" class="button icon-left ion-chevron-left button-clear button-dark">Volver a Tipo de juegos</a>
         </div>
     </ion-content>
 </ion-view>
