--- a/www/templates/tiposDeJuegos.html
+++ b/www/templates/tiposDeJuegos.html
@@ -7,5 +7,9 @@
         <a ui-sref="menu.completarPalabras" id="tiposDeJuegos-button4" class="button button-positive  button-block">Completar palabras</a>
         <button id="tiposDeJuegos-button6" class="button button-positive  button-block">Separar silabas</button>
         <button id="tiposDeJuegos-button5" class="button button-positive  button-block">Coordinación</button>
+        <div class="spacer" style="width: 285px; height: 223px;"></div>
+        <div>
+            <a ui-sref="menu.home" class="button icon-left ion-chevron-left button-clear button-dark">Volver a Menú</a>
+        </div>
     </ion-content>
 </ion-view>
