--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,7 +1,7 @@
 <ion-side-menus enable-menu-with-back-views="false">
     <ion-side-menu-content>
         <ion-nav-bar class="bar-stable">
-            <ion-nav-back-button></ion-nav-back-button>
+            <!-- <ion-nav-back-button></ion-nav-back-button> -->
             <ion-nav-buttons side="left">
                 <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
             </ion-nav-buttons>
@@ -10,7 +10,7 @@
     </ion-side-menu-content>
     <ion-side-menu side="left" id="side-menu21">
         <ion-header-bar class="bar-stable">
-            <div class="title">Menu</div>
+            <div class="title">Menú</div>
         </ion-header-bar>
         <ion-content padding="false" class="side-menu-left has-header">
             <ion-list>
