Agragada funcionalidad par leer textos

--- a/www/templates/completarPalabras1.html
+++ b/www/templates/completarPalabras1.html
@@ -1,15 +1,23 @@
 <ion-view title="CompletarPalabras1" id="page9">
     <ion-content padding="true" class="has-header">
         <form class="list"></form>
-        <div class="spacer" style="height: 100px;"></div>
+        
         <div>
+      
             <h1>
                 Árb
             </h1>
         </div>
+          <div class="item ">
+    <img style="height: 100px " src="http://3.bp.blogspot.com/-h6mXRVQaLPg/VAC36kG1UTI/AAAAAAAAFDo/8I-sxdwqlJQ/s1600/RMK1554GM_Kids_Tree_Giant_Wall_Decal_med.jpg">
+
+  </div>
+
+  </div>
+
         <form class="list">
-            <ion-checkbox>ol</ion-checkbox>
-            <ion-checkbox>ar</ion-checkbox>
+            <ion-checkbox ng-click="speakText('Árbol')">ol</ion-checkbox>
+            <ion-checkbox ng-click="speakText('Árbal')">ar</ion-checkbox>
         </form>
         <a ui-sref="menu.felicidades" id="completarPalabras1-button9" class="button button-positive  button-block icon ion-checkmark-circled">Verifcar</a>
     </ion-content>
