--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -3,13 +3,14 @@
         <div class="spacer" style="width: 285px; height: 37px;"></div>
         <div id="home-markdown1" style="color:#00A388;font-size:60px;text-align:center;">
             <p>
-                <em>CAPP</em>
+                <em>eCAL</em>
             </p>
         </div>
+        <h1 style="color:#00A388;font-size:40px;text-align:center;" >Hola {{myWelcome}}</h1>
         <div class="spacer" style="height: 100px;"></div>
-        <a ui-sref="menu.tiposDeJuegos" id="home-button1" class="button button-positive button-large button-block icon ion-ios-game-controller-b">Jugar !!!</a>
+        <a ui-sref="menu.tiposDeJuegos" id="home-button1" class="button button-positive button-large button-block icon ion-ios-game-controller-b" ng-click="speakText('Vamos a jugar!')">Jugar !!!</a>
         <div class="spacer" style="width: 285px; height: 34px;"></div>
-        <button id="home-button2" class="button button-positive  button-block">Instrucciones</button>
-        <button id="home-button3" class="button button-positive  button-block">Opciones</button>
+        <button id="home-button2" class="button button-positive  button-block" ng-click="speakText('Instrucciones')">Instrucciones</button>
+        <button id="home-button3" class="button button-positive  button-block" ng-click="speakText('Opciones')">Opciones</button>
     </ion-content>
 </ion-view>
