--- a/www/templates/completarPalabras1.html
+++ b/www/templates/completarPalabras1.html
@@ -13,7 +13,7 @@
         </form> -->
           <ion-item-group>
             <ion-item>
-              <ion-radio name="radio" ng-repeat="item in items">{{item}}</ion-radio>
+              <ion-radio name="radio" id="radiobuton" ng-repeat="item in items">{{item}}</ion-radio>
             </ion-item>
           </ion-item-group>
         <!-- <a ui-sref="menu.felicidades" id="completarPalabras1-button9" class="button button-positive  button-block icon ion-checkmark-circled">Verifcar</a> -->
