Agregado un ejercicio de completar palabras, verificandolo y con voz

--- a/www/templates/vuelveAIntentarlo.html
+++ b/www/templates/vuelveAIntentarlo.html
@@ -11,6 +11,6 @@
             </a>
         </div>
         <div class="spacer" style="width: 285px; height: 30px;"></div>
-        <button id="vuelveAIntentarlo-button8" class="button button-positive  button-block">Continuar</button>
+        <button ui-sref="menu.completarPalabras" id="vuelveAIntentarlo-button8" class="button button-positive  button-block">Continuar</button>
     </ion-content>
 </ion-view>
