--- a/www/templates/completarPalabras1.html
+++ b/www/templates/completarPalabras1.html
@@ -8,20 +8,20 @@
                 Árb__
             </h1>
         </div>
-<<<<<<< HEAD
+
         <!-- <form class="list">
             <ion-checkbox>ol</ion-checkbox>
             <ion-checkbox>ar</ion-checkbox>
         </form> -->
           <ion-item-group>
             <ion-item>
-              <ion-radio name="radio" id="radiobuton" ng-repeat="item in items">{{item}}</ion-radio>
+              <ion-radio name="radio" id="radiobuton" ng-repeat="item in items"  ng-click="speakText('Árb'+'{{item}}'); respuesta('{{item}}')">{{item}}</ion-radio>
             </ion-item>
           </ion-item-group>
         <!-- <a ui-sref="menu.felicidades" id="completarPalabras1-button9" class="button button-positive  button-block icon ion-checkmark-circled">Verifcar</a> -->
-        <button onclick="opcion.verificar()" type="button" class="button button-positive  button-block icon ion-checkmark-circled">Verificar</button>
+        <button ng-click="verificar()" type="button" class="button button-positive  button-block icon ion-checkmark-circled">Verificar</button>
 
-=======
+
           <div class="item ">
     <img style="height: 100px " src="http://3.bp.blogspot.com/-h6mXRVQaLPg/VAC36kG1UTI/AAAAAAAAFDo/8I-sxdwqlJQ/s1600/RMK1554GM_Kids_Tree_Giant_Wall_Decal_med.jpg">
 
@@ -29,12 +29,8 @@
 
   </div>
 
-        <form class="list">
-            <ion-checkbox ng-click="speakText('Árbol')">ol</ion-checkbox>
-            <ion-checkbox ng-click="speakText('Árbal')">ar</ion-checkbox>
-        </form>
-        <a ui-sref="menu.felicidades" id="completarPalabras1-button9" class="button button-positive  button-block icon ion-checkmark-circled">Verifcar</a>
->>>>>>> completarpalabras
+
+
     </ion-content>
 </ion-view>
 <script type="text/javascript">
