Agregadas instrucciones e informacion de aplicacion

--- a/www/templates/completarPalabras1.html
+++ b/www/templates/completarPalabras1.html
@@ -1,6 +1,10 @@
-<ion-view title="CompletarPalabras1" id="page9">
+<ion-view title="Selecciona una opción" id="page9">
     <ion-content padding="true" class="has-header">
         <form class="list"></form>
+         <div class="item ">
+    <img style="height: 100px " src="img/arbol.jpg">
+
+  </div>
         
         <div>
       
@@ -22,10 +26,7 @@
         <button ng-click="verificar()" type="button" class="button button-positive  button-block icon ion-checkmark-circled">Verificar</button>
 
 
-          <div class="item ">
-    <img style="height: 100px " src="http://3.bp.blogspot.com/-h6mXRVQaLPg/VAC36kG1UTI/AAAAAAAAFDo/8I-sxdwqlJQ/s1600/RMK1554GM_Kids_Tree_Giant_Wall_Decal_med.jpg">
-
-  </div>
+         
 
   </div>
 
