--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -10,7 +10,7 @@
         <div class="spacer" style="height: 100px;"></div>
         <a ui-sref="menu.tiposDeJuegos" id="home-button1" class="button button-positive button-large button-block icon ion-ios-game-controller-b" ng-click="speakText('Vamos a jugar!')">Jugar !!!</a>
         <div class="spacer" style="width: 285px; height: 34px;"></div>
-        <button id="home-button2" class="button button-positive  button-block" ng-click="speakText('Instrucciones')">Instrucciones</button>
+        <button id="home-button2" class="button button-positive  button-block" ng-click="speakText('Instrucciones') ; speakText2()">Instrucciones</button>
         <button id="home-button3" class="button button-positive  button-block" ng-click="speakText('Opciones')">Opciones</button>
     </ion-content>
 </ion-view>
