Ejercicio barco agregado

--- a/www/templates/completarPalabras.html
+++ b/www/templates/completarPalabras.html
@@ -2,7 +2,8 @@
     <ion-content padding="true" class="has-header">
         <div class="button-bar">
             <a ui-sref="menu.completarPalabras1" id="completarPalabras-button12" class="button button-positive  button-block">1</a>
-            <button id="completarPalabras-button13" class="button button-positive  button-block">2</button>
+            <a ui-sref="menu.completarPalabras2" id="completarPalabras-button12" class="button button-positive  button-block">2</a>
+         
             <button id="completarPalabras-button14" class="button button-positive  button-block">3</button>
         </div>
         <div class="spacer" style="width: 285px; height: 16px;"></div>
