--- a/www/templates/completarPalabras2.html
+++ b/www/templates/completarPalabras2.html
@@ -1,15 +1,15 @@
-<ion-view title="Selecciona una opción" id="page9">
+<ion-view title="Selecciona una opción" id="page10">
     <ion-content padding="true" class="has-header">
         <form class="list"></form>
          <div class="item ">
-    <img style="height: 100px " src="img/arbol.jpg">
+    <img style="height: 100px " src="img/barco.jpg">
 
   </div>
         
         <div>
       
             <h1>
-                Árb__
+                Bar__
             </h1>
         </div>
 
@@ -19,7 +19,7 @@
         </form> -->
           <ion-item-group>
             <ion-item>
-              <ion-radio name="radio" id="radiobuton" ng-repeat="item in items"  ng-click="speakText('Árb'+'{{item}}'); respuesta('{{item}}')">{{item}}</ion-radio>
+              <ion-radio name="radio" id="radiobuton" ng-repeat="item in items"  ng-click="speakText('Bar'+'{{item}}'); respuesta('{{item}}')">{{item}}</ion-radio>
             </ion-item>
           </ion-item-group>
         <!-- <a ui-sref="menu.felicidades" id="completarPalabras1-button9" class="button button-positive  button-block icon ion-checkmark-circled">Verifcar</a> -->
