--- a/www/templates/instrucciones.html
+++ b/www/templates/instrucciones.html
@@ -8,5 +8,6 @@
             </ion-item>
         </ion-list>
         <h4 id="instrucciones-heading10" style="color:#00796F;text-align:justify;" class=" ">Me alegro de que nos acompañes, esperamos te diviertas mucho. Para empezar ve al menú principal y selecciona jugar después sigue las instrucciones y consigue tantas medallas como puedas .</h4>
+       <a ui-sref="menu.home" class="button icon-left ion-chevron-left button-clear button-dark">Volver a Menú</a>
     </ion-content>
 </ion-view>
