--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -15,8 +15,8 @@
         <ion-content padding="false" class="side-menu-left has-header">
             <ion-list>
                 <ion-item ui-sref="menu.home" menu-close="">Inicio</ion-item>
-                <ion-item ui-sref="menu.cart" menu-close="">Tienda</ion-item>
-                <ion-item ui-sref="menu.cloud" menu-close="">Acerca de</ion-item>
+                <ion-item ui-sref="menu.usuario" menu-close="">Usuario</ion-item>
+                <ion-item ui-sref="menu.acercaDe" menu-close="">Acerca de</ion-item>
             </ion-list>
         </ion-content>
     </ion-side-menu>
