--- a/www/templates/acercaDe.html
+++ b/www/templates/acercaDe.html
@@ -24,5 +24,6 @@
                 <span class="item-note">ramon.osc93@gmail.com</span>
             </ion-item>
         </div>
+        <a ui-sref="menu.home" class="button icon-left ion-chevron-left button-clear button-dark">Volver a Menú</a>
     </ion-content>
 </ion-view>
