Ejercicio pecera agregado

--- a/www/templates/completarPalabras.html
+++ b/www/templates/completarPalabras.html
@@ -4,7 +4,7 @@
             <a ui-sref="menu.completarPalabras1" id="completarPalabras-button12" class="button button-positive  button-block">1</a>
             <a ui-sref="menu.completarPalabras2" id="completarPalabras-button12" class="button button-positive  button-block">2</a>
          
-            <button id="completarPalabras-button14" class="button button-positive  button-block">3</button>
+             <a ui-sref="menu.completarPalabras3" id="completarPalabras-button12" class="button button-positive  button-block">3</a>
         </div>
         <div class="spacer" style="width: 285px; height: 16px;"></div>
         <div class="button-bar">
