Ejercicio raton agregado

--- a/www/templates/completarPalabras.html
+++ b/www/templates/completarPalabras.html
@@ -8,7 +8,7 @@
         </div>
         <div class="spacer" style="width: 285px; height: 16px;"></div>
         <div class="button-bar">
-            <button id="completarPalabras-button15" class="button button-positive  button-block">4</button>
+            <a ui-sref="menu.completarPalabras4" id="completarPalabras-button12" class="button button-positive  button-block">4</a>
             <button id="completarPalabras-button16" class="button button-positive  button-block">5</button>
             <button id="completarPalabras-button17" class="button button-positive  button-block">6</button>
         </div>
