Ejercicio camiseta agregado

--- a/www/templates/completarPalabras.html
+++ b/www/templates/completarPalabras.html
@@ -9,8 +9,8 @@
         <div class="spacer" style="width: 285px; height: 16px;"></div>
         <div class="button-bar">
             <a ui-sref="menu.completarPalabras4" id="completarPalabras-button12" class="button button-positive  button-block">4</a>
-            <button id="completarPalabras-button16" class="button button-positive  button-block">5</button>
-            <button id="completarPalabras-button17" class="button button-positive  button-block">6</button>
+            <a ui-sref="menu.completarPalabras5" id="completarPalabras-button12" class="button button-positive  button-block">5</a>
+            <button id="completarPalabras-button17" class="button button-energized  button-block">6</button>
         </div>
         <div class="spacer" style="width: 285px; height: 223px;"></div>
         <div>
